--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -4,3 +4,19 @@
     border: 1px;
     box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%);
 }
+
+
+.item-list-container {
+    width: 100%;
+    min-height: 60vh;
+    padding: 30px;
+    margin-bottom: 60px;
+  
+   
+  }
+  
+  .item-list-container__title {
+    text-align: center;
+    margin: 30px 0;
+    font-size: 2rem;
+  }
