--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -14,3 +14,15 @@
     font-size: 1.6rem;
   }
   
+  .item-card {
+    width: 100%;
+    max-width: min-content;
+    min-height: 45vh;
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .link{
+    text-decoration: none;
+  }
